Cleanup delete endpoints, use bulk everywhere' (#131)
- removed simple delete endpoints
- use bulk-delete everywhere
- apply format
